# segmentation_model

./: .gitignore  README.md  download_weights.py  evaluate.py  infer.py  infer_custom.py  pyproject.toml  requirements.txt  smoke_test.py  train.py
configs/: config.yaml  custom_dataset.yaml
data/: __init__.py  custom_dataset.py  download_rugd.py  rugd_dataset.py
docs/: CUSTOM_DATASET_GUIDE.md  HPC_GUIDE.md  INFERENCE_GUIDE.md
hpc/: launch.sh  setup_env.sh  train.slurm
models/: __init__.py  deeplabv3plus.py
utils/: __init__.py  inference_metrics.py  metrics.py  metrics_chart.py  transforms.py  visualization.py
